[package]
name = "bat_flight"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
bevy_wind_waker_shader = "0.6.0"
rand = "0.9"

[profile.release]
opt-level = "z"    
lto = true         
codegen-units = 1  
strip = true       
panic = "abort"    

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
